--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,4 @@
 browser=chrome
 medunna_login_url=https://medunna.com/
 medunna_registration_url=https://medunna.com/account/register
+registrantFile = src/test/resources/testdata/Medunna.txt
