--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,8 @@
 browser=chrome
 medunna_login_url=https://medunna.com/
 medunna_registration_url=https://medunna.com/account/register
-registrantFile = src/test/resources/testdata/Medunna.txt
+registrant_filename=src/test/resources/testdata/Medunna.txt
+appointment_records=src/test/resources/testdata/AppointmentData.txt
+base_url=https://medunna.com
+api_registrant_data=src/test/resources/testdata/ApiRegistrantData.txt
+registrant_endpoint=https://medunna.com/api/users?=size=2000
