--- a/configuration.properties
+++ b/configuration.properties
@@ -16,3 +16,4 @@ database_registrant_data=src/test/resources/testdata/DatabaseRegistrantData.txt
 api_all_registrant_data=src/test/resources/testdata/ApiAllRegistrantData.txt
 registrant_delete_endpoint=https://medunna.com/api/users
 appointment_API_records=src/test/resources/testdata/AppointmentAPIData.txt
+database_appointments_data=src/test/resources/testdata/DatabaseAppointmentsData.txt
