--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,5 @@ browser=chrome
 medunna_login_url=https://medunna.com/
 medunna_registration_url=https://medunna.com/account/register
 registrantFile = src/test/resources/testdata/Medunna.txt
+passworUserdName = WadeLakin
+password1 = Techproed2022.
