--- a/configuration.properties
+++ b/configuration.properties
@@ -16,4 +16,6 @@ database_registrant_data=src/test/resources/testdata/DatabaseRegistrantData.txt
 api_all_registrant_data=src/test/resources/testdata/ApiAllRegistrantData.txt
 registrant_delete_endpoint=https://medunna.com/api/users
 appointment_API_records=src/test/resources/testdata/AppointmentAPIData.txt
-database_appointments_data=src/test/resources/testdata/DatabaseAppointmentsData.txt
+database_physician_data=src/test/resources/testdata/DatabasePhysiciansData.txt
+patients_endpoint=https://medunna.com/api/patients?=size=2000
+database_patient_info=src/test/resources/testdata/DatabasePatientInfoData.txt
