--- a/configuration.properties
+++ b/configuration.properties
@@ -17,3 +17,4 @@ api_all_registrant_data=src/test/resources/testdata/ApiAllRegistrantData.txt
 registrant_delete_endpoint=https://medunna.com/api/users
 appointment_API_records=src/test/resources/testdata/AppointmentAPIData.txt
 database_appointments_data=src/test/resources/testdata/DatabaseAppointmentsData.txt
+physician_data=src/test/resources/testdata/PhysicianData.txt
