--- a/configuration.properties
+++ b/configuration.properties
@@ -18,3 +18,6 @@ registrant_delete_endpoint=https://medunna.com/api/users
 appointment_API_records=src/test/resources/testdata/AppointmentAPIData.txt
 database_appointments_data=src/test/resources/testdata/DatabaseAppointmentsData.txt
 physician_data=src/test/resources/testdata/PhysicianData.txt
+physicians_endpoint=https://medunna.com/api/physicians?=size=2000
+physician_API_records=src/test/resources/testdata/PhysicianAPIData.txt
+database_physician_data=src/test/resources/testdata/DatabasePhysiciansData.txt
